# obs-studio

./: .gitmodules
.github/workflows/: main.yml
CI/flatpak/: com.obsproject.Studio.json
CI/linux/: 01_install_dependencies.sh  02_build_obs.sh
UI/: obs-app.cpp  qt-display.cpp  window-basic-main-outputs.cpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-properties.cpp  window-basic-settings.cpp
UI/cmake/: legacy.cmake
UI/forms/: OBSBasicSettings.ui
cmake/Modules/: FindMfx.cmake  ObsHelpers.cmake
libobs/: CMakeLists.txt  obs-audio.c  obs-display.c  obs-encoder.c  obs-encoder.h  obs-internal.h  obs-module.c  obs-nix-platform.h  obs-nix.c  obs-output.c  obs-scene.c  obs-service.c  obs-source.c  obs-video-gpu-encode.c  obs-video.c  obs-view.c  obs.c  obs.h
libobs-opengl/: .gl-wayland-egl.c.swp  CMakeLists.txt  gl-egl-common.c  gl-gbm.c  gl-gbm.h  gl-helpers.c  gl-helpers.h  gl-nix.c  gl-nix.h  gl-subsystem.c  gl-subsystem.h  gl-texture2d.c  gl-wayland-egl.c  gl-x11-egl.c  gl-x11-glx.c
libobs/cmake/: legacy.cmake
libobs/graphics/: .device-exports.h.swp  .graphics-imports.c.swp  .graphics-internal.h.swp  .graphics.c.swp  .graphics.h.swp  device-exports.h  effect.c  effect.h  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h
libobs/media-io/: video-frame.c  video-io.c
libobs/util/: base.c  pipe-posix.c  pipe-windows.c  pipe.h  platform-nix.c  profiler.c  profiler.h  profiler.hpp  threading.h
plugins/: CMakeLists.txt
plugins/linux-capture/: pipewire.c  xcompcap-helper.cpp  xcompcap-main.cpp  xcomposite-input.c
plugins/linux-pipewire/: pipewire.c  screencast-portal.c
plugins/obs-ffmpeg/: obs-ffmpeg-audio-encoders.c  obs-ffmpeg-formats.h  obs-ffmpeg-mux.c  obs-ffmpeg-output.c  obs-ffmpeg-output.h  obs-ffmpeg-vaapi.c  obs-ffmpeg.c  vaapi-utils.c
plugins/obs-ffmpeg/ffmpeg-mux/: CMakeLists.txt  ffmpeg-mux.c
plugins/obs-outputs/: CMakeLists.txt
plugins/obs-qsv11/: CMakeLists.txt  QSV_Encoder.cpp  QSV_Encoder.h  QSV_Encoder_Internal.cpp  QSV_Encoder_Internal.h  common_directx11.cpp  common_utils.h  common_utils_linux.cpp  common_utils_windows.cpp  obs-qsv11-plugin-main.c  obs-qsv11.c
plugins/obs-qsv11/platform/: common_utils.h  common_utils_linux.cpp  common_utils_windows.cpp  device_directx9.h
plugins/rtmp-services/data/: services.json
plugins/text-freetype2/: text-freetype2.c  text-functionality.c
